--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -27,12 +27,16 @@ ul.friends_list {
   float: right;
 }
 
-.avatar {
-  width: 50px;
-  height: 50px;
+.avatar_mini {
   float: left;
+  height: 30px;
+  margin: 3px;
+  width: 30px;
+  border-radius: 20%;
 }
-
+.avatar{
+  border-radius: 20%;
+}
 #user_info {
   height: 50px;
   padding: 15px 0px;
