--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,3 +1,4 @@
+=render 'layouts/navigation'
 .authform
   = form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
     %h2 Sign up
@@ -33,5 +34,5 @@
         %br/
         = f.password_field :password_confirmation, class: 'form-control'
     %div= f.submit "Sign up", :class => 'button right'
-  = render "devise/shared/links"
+    = render "devise/shared/links"
 
