--- a/app/views/layouts/_navigation_links.html.haml
+++ b/app/views/layouts/_navigation_links.html.haml
@@ -1,35 +1,23 @@
--#-if user_signed_in?
--#  - status_icon_styles = ["online", "offline", "away", "do_not_disturb"]
--#  %li.dropdown.user-dropdown#userSatus
--#    %a.dropdown-toggle#userStatus{:href=>"#",:type=>"button", :data=>{:toggle=>"dropdown"}}
--#      %i{:class => "glyphicon glyphicon-off #{get_user_status_icon(current_user.user_stat_id)}"}
--#      Status
--#      %b.caret
--#    %ul.dropdown-menu{:role=>"menu", :aria=>{:labelledby=>"dropdownMenu1"}}
--#      - @statuses.each_with_index do |status, index|
--#        %li{:role => "presentation"}
--#          %a.change-status{:role=>"menuitem", :tabindex=>"-1", :data=>{:id=>status.id}, :href=>"#"}
--#            %span{:class => "glyphicon glyphicon-off #{status_icon_styles[index]}"}
--#            = status.status_name
--#  %li
--#    = link_to 'Users', users_path
--#  %li.dropdown.user-dropdown
--#    %a.dropdown-toggle{:href=>"#",:data=>{:toggle=>"dropdown"}}
--#      %i.fa.fa-user
--#      =current_user.firstname
--#      %b.caret
--#    %ul.dropdown-menu
--#      %li
--#        = link_to 'Edit account', edit_user_registration_path
--#      %li.divider
--#      %li
--#        = link_to 'Logout', destroy_user_session_path, :method=>'delete'
--#-else
--#  %li
--#    = link_to 'Login', new_user_session_path
--#  %li
--#    = link_to 'Sign up', new_user_registration_path
--#  %li
--#    = link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook), class: 'navbar-brand'
--#  %li
--#    = link_to 'Sign in with Github', user_omniauth_authorize_path(:github), class: 'navbar-brand'
+-if user_signed_in?
+  %li
+    = link_to 'Users', users_path
+  %li.dropdown.user-dropdown
+    %a.dropdown-toggle{:href=>"#",:data=>{:toggle=>"dropdown"}}
+      %i.fa.fa-user
+      =current_user.firstname
+      %b.caret
+    %ul.dropdown-menu
+      %li
+        = link_to 'Edit account', edit_user_registration_path
+      %li.divider
+      %li
+        = link_to 'Logout', destroy_user_session_path, :method=>'delete'
+-else
+  %li
+    = link_to 'Login', new_user_session_path
+  %li
+    = link_to 'Sign up', new_user_registration_path
+  %li
+    = link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook), class: 'navbar-brand'
+  %li
+    = link_to 'Sign in with Github', user_omniauth_authorize_path(:github), class: 'navbar-brand'
