Fix js and sending messages

--- a/app/assets/stylesheets/lobby.css
+++ b/app/assets/stylesheets/lobby.css
@@ -1,11 +1,4 @@
 
-/*@font-face {*/
-	/*font-family: 'Glyphicons Halflings';*/
-	/*src: url('../fonts/glyphicons-halflings-regular.eot');*/
-	/*src: url('../fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/glyphicons-halflings-regular.woff') format('woff'), url('../fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../fonts/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');*/
-/*}*/
-/*@import url("//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc2/css/bootstrap-glyphicons.css");*/
-
 * {-moz-box-sizing: border-box;margin: 0;padding: 0;}
 html, body {height: 100%;width: 100%;}
 a{text-decoration: none;}
@@ -516,10 +509,11 @@ h2.public{
 .upload-place input{
 	margin-left: -62px;
 }
-#upload-file:focus{
+#attach_path:focus{
 	outline: none;
 }
-#message_input {
+#message {
+	display: block;
 	border: medium none;
 	font-size: 12px;
 	max-height: 100%;
