--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -26,11 +26,12 @@ ul.friends_list {
 #user_search {
   float: right;
 }
-
-.avatar {
-  width: 50px;
-  height: 50px;
+ .avatar_mini {
   float: left;
+  height: 30px;
+  margin: 3px;
+  width: 30px;
+  border-radius: 20%;
 }
 
 #user_info {
