--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -25,17 +25,73 @@
 #user_search {
   float: right;
 }
-.avatar_mini {
-  float: left;
-  height: 30px;
-  margin: 3px;
-  width: 30px;
-  border-radius: 20%;
+
+span#user_name {
+  margin-left: 100px;
+  font-size: 16px;
 }
-.avatar{
-  border-radius: 20%;
-}
+
+
 #user_info {
+  height: 50px;
+  padding: 15px 0px;
+}
+
+#photo {
+  float: left;
+  width: 175px;
+  height: 150px;
+  display: inline-block;
+}
+
+.profile {
+  height: 150px;
+  width: 450px;
+  margin: 0px auto;
+  margin-top: 50px;
+}
+
+#friendship {
+  width: 505px;
+  margin: 0px auto;
+  text-align: center;
+  margin-top: 20px;
+}
+
+ul#friends_list {
+  height: 300px;
+  width: 500px;
+  padding: 0px;
+  list-style: none;
+  overflow-y: auto;
+}
+
+.friend{
+  float: left;
+  width: 440px;
+  margin-left: 5px;
+  margin-bottom: 1px;
+  background: rgba(80,80,80, 0.1);
+}
+
+.friend_action {
+  width: 50px;
+  height: 50px;
+  float: left;
+  text-align: center;
+  padding-top: 12px;
+}
+
+.friend_action:hover {
+  background: orange;
+}
+
+.friend:hover {
+  background: rgba(80,80,80, 0.25);
+}
+
+.friend_photo {
+  width: 50px;
   height: 50px;
   margin-right: 10px;
   float: left;
