--- a/app/assets/stylesheets/chat.css.scss
+++ b/app/assets/stylesheets/chat.css.scss
@@ -63,6 +63,11 @@
       img {
         margin-left: 60px;
         margin-right: 10px;
+        &.emoji
+        {
+          margin-left: 0;
+          margin-right: 0;
+        }
       }
     }
     &.right .chat-body {
