--- a/app/views/layouts/_rooms_list.html.haml
+++ b/app/views/layouts/_rooms_list.html.haml
@@ -5,16 +5,16 @@
   %nav.lobby-panel
     %ul#tabs.tabs.ui-sortable
       %li#tab_lobby.selected
-        %a.open{:href => "#"}
+        %a.open{:href => "/rooms"}
           %span.glyphicon.glyphicon-th-list>
           Lobby
       - if !@room_list.nil?
         - @room_list.each do |room|
           - if room.id==@room_id.to_i
-            %li.active
+            %li.active#room
               =link_to "#{room.name}",room_path(:id=>room.id),:room_id => room.id
           -else
-            %li
+            %li#room
               =link_to "#{room.name}",room_path(:id=>room.id), :room_id => room.id
   #status_ui
     =image_tag avatar_url(current_user,50),:class => "avatar_mini"
@@ -49,20 +49,19 @@
             %span.glyphicon.glyphicon-record
     .dropdown
       %button#drop2.btn.btn-default.dropdown-toggle.tf-but{"data-toggle" => "dropdown", :role => "button"}
-        Room actions
+        Friends
         %span.caret
-      %ul.dropdown-menu.room-action{"aria-labelledby" => "drop2", :role => "menu"}
-        %li
-          %a{:href => "#", :tabindex => "-1"} Action
-        %li
-          %a{:href => "#", :tabindex => "-1"} Another action
-        %li
-          %a{:href => "#", :tabindex => "-1"} Else remark
+      %ul.dropdown-menu.room-action.friend_list{"aria-labelledby" => "drop2", :role => "menu"}
+        - current_user.friends.each do |friend|
+          %li.user_friend{:user_id => friend.id}
+            = link_to rooms_users_path, :method => :post do
+              %span{:class => get_user_status_style(friend.user_stat_id)}
+              = "#{friend.login}"
   - if @room_users != nil
     .list
       - @room_users.each do |user|
         .member
           %span{:class => get_user_status_style(user.user_stat_id)}
-          = link_to "#{user.login}", user_path(user.id), :user_id => user.id, :room_id => @room.id
+          = link_to "#{user.login}", user_path(user.id), :user_id => user.id
   .footer
 
