--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -6,6 +6,14 @@
   width: 50px;
   height: 50px;
   float: left;
+  border-radius: 20%;
+}
+.avatar_mini {
+  float: left;
+  height: 30px;
+  margin: 3px;
+  width: 30px;
+  border-radius: 20%;
 }
 
 .img-profle {
