--- a/app/views/layouts/_rooms_list.html.haml
+++ b/app/views/layouts/_rooms_list.html.haml
@@ -1,10 +1,11 @@
 %aside.left
   %h1.logo
-    %img{:alt => "SBS", :src => "../img/logo.png"}
+    %a{:href => "/"}
+      %img{:alt => "SBS", :src => "../img/logo.png"}
   %nav.lobby-panel
     %ul#tabs.tabs.ui-sortable
       %li#tab_lobby.selected
-        %a.open{:href => "#{rooms_path}"}
+        %a.open{:href => "#"}
           %span.glyphicon.glyphicon-th-list>
           Lobby
       - if !@room_list.nil?
@@ -68,6 +69,6 @@
     .list
       - @room_users.each do |user|
         .member{:id=>user.id, :user_id => user.id, :room_id => @room.id}
-          %span{:class => get_user_status_style(user.user_stat_id)}
+          %span.glyphicon.glyphicon-eye-open.drop-av.drop-col-mar>
           = link_to "#{user.login}","#"
   .footer
