--- a/app/assets/stylesheets/all.css
+++ b/app/assets/stylesheets/all.css
@@ -454,6 +454,7 @@ input[type="text"], input[type="password"], textarea {
 	font-size: 16px;
 	outline-color: #005B94;
 	padding: 5px;
+	height: 35px;
 }
 .form-horizontal .control-label {
 	text-align: left;
