--- a/app/assets/stylesheets/lobby.css
+++ b/app/assets/stylesheets/lobby.css
@@ -164,7 +164,7 @@ body {background-color: #f0f0f0;line-height: normal;}
 	box-shadow: inset 0 1px 0 #555, inset 0 2px 3px #333, 0 -1px 0 #777, 0 -1px 5px #222;
 	bottom: 0;
 	cursor: pointer;
-	height: 35px;
+	height: 75px;
 	position: absolute;
 	width: 201px;
 }
@@ -187,7 +187,7 @@ body {background-color: #f0f0f0;line-height: normal;}
 	text-decoration: none;
 	line-height: 30px;
 	margin-top: 5px;
-	margin-left: 17px;
+	margin-left: -1px;
 	float: left;
 }
 .avail:hover,
@@ -196,6 +196,7 @@ body {background-color: #f0f0f0;line-height: normal;}
 	color: #999;
 }
 .avail span.glyphicon-eye-open{color: #1ee356;margin-right: 5px;}
+.glyphicon.glyphicon-eye-open.drop-av.drop-col-mar#off{color: #000000;}
 #status_ui a.glyphicon-cog{
 	display: block;
 	color: #999;
@@ -205,7 +206,7 @@ body {background-color: #f0f0f0;line-height: normal;}
 	font-size: 16px;
 	line-height: 30px;
 	margin-top: 2px;
-	margin-right: 15px;
+	margin-right: 5px;
 	border-left: 1px solid #313949;
 	padding-left: 7px;
 	box-shadow: 1px 0 0 #727b8e inset, -1px 0 0 #727b8e;
