--- a/app/views/rooms/_show_rooms_list.html.haml
+++ b/app/views/rooms/_show_rooms_list.html.haml
@@ -7,7 +7,7 @@
           %a.clean
             =link_to "#{room.name}",room_path(:id=>room.id),:room_id => room.id
         %td.memb-count
-          = count_members(room.id)
+          = count_members(@rooms_preload,room.id)
           ="members"
         %td.owner
           ="Owned by: "
