--- a/app/views/message/_dialog.html.haml
+++ b/app/views/message/_dialog.html.haml
@@ -53,9 +53,13 @@
                 %span.glyphicon.glyphicon-paperclip
             %td{:width => "1%"}
               %button.form-but#send_message{:type => "button"}
-                %span.glyphicon.glyphicon-thumbs-up
-    %ul
-      =render "layouts/index"
+                -smile=render "layouts/index"
+                %span.glyphicon.glyphicon-thumbs-up#pop{"data-container" => "body",
+                                                        "data-content" => smile,
+                                                        "data-placement" => "top",
+                                                        "data-toggle" => "popover", type: "button"}
+    -#%ul
+    -#  =render "layouts/index"
 %audio#new-message
   %source{:src=>"../sounds/button_tiny.ogg", :type=>"audio/ogg"}
   %source{:src=>"../sounds/button_tiny.mp3", :type=>"audio/mp3"}
